crates/rattler_conda_types/src/repo_data/snapshots/rattler_conda_types__repo_data__test__base_url_packages.snap
---
source: crates/rattler_conda_types/src/repo_data/mod.rs
assertion_line: 511
expression: file_urls
---
- channels/dummy/linux-64/foobar-2.1-bla_1.tar.bz2
- channels/dummy/linux-64/bors-2.1-bla_1.tar.bz2
- channels/dummy/linux-64/bar-1.0-unix_py36h1af98f8_2.tar.bz2
- channels/dummy/linux-64/bors-1.0-bla_1.tar.bz2
- channels/dummy/linux-64/foo-3.0.2-py36h1af98f8_1.conda
- channels/dummy/linux-64/foo-3.0.2-py36h1af98f8_1.tar.bz2
- channels/dummy/linux-64/baz-2.0-unix_py36h1af98f8_2.tar.bz2
- channels/dummy/linux-64/foo-4.0.2-py36h1af98f8_2.tar.bz2
- channels/dummy/linux-64/bors-1.1-bla_1.tar.bz2
- channels/dummy/linux-64/bors-2.0-bla_1.tar.bz2
- channels/dummy/linux-64/foobar-2.0-bla_1.tar.bz2
- channels/dummy/linux-64/bors-1.2.1-bla_1.tar.bz2
- channels/dummy/linux-64/baz-1.0-unix_py36h1af98f8_2.tar.bz2
