crates/rattler_conda_types/src/repo_data/snapshots/rattler_conda_types__repo_data__test__deserialize_no_noarch_empty_str.snap
---
source: crates/rattler_conda_types/src/repo_data/mod.rs
expression: repodata
---
info:
  subdir: noarch
  base_url: "../linux-64"
packages:
  foo-1-xxx.tar.bz2:
    build: xxx
    build_number: 0
    depends: []
    extra_depends:
      with-bar:
        - bar <2
    name: foo
    subdir: linux-64
    version: "1"
  bar-1-xxx.tar.bz2:
    build: xxx
    build_number: 0
    depends: []
    name: bar
    subdir: linux-64
    version: "1"
  bar-2-xxx.tar.bz2:
    build: xxx
    build_number: 0
    depends: []
    name: bar
    subdir: linux-64
    version: "2"
packages.conda: {}
repodata_version: 2
