crates/rattler_conda_types/src/repo_data/snapshots/rattler_conda_types__repo_data__test__serialize.snap
---
source: crates/rattler_conda_types/src/repo_data/mod.rs
expression: repodata
---
repodata_version: 1
info: ~
packages: {}
packages.conda: {}
removed:
  - aux
  - bar
  - baz
  - foo
  - quux
  - qux
  - xyz

